Fix form fields overflowing on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
 
 body {
   min-height: 100vh;
+  min-width: 320px;
   background-color: rgb(228, 228, 228);
   display: flex;
   flex-direction: column;
@@ -50,30 +51,37 @@ form h2 {
   color: white;
   font-weight: 600;
   width: 100%;
+  font-size: 1rem;
 }
 
 .form-fields {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
   margin-bottom: 1rem;
+  font-size: 1rem;
 }
 
-.form-fields > * {
+.form-field {
   display: flex;
   justify-content: space-between;
-  align-items: end;
+  align-items: center;
+  align-content: center;
   gap: 1rem;
 }
 
 dialog input,
 dialog select {
+  min-width: 10rem;
   width: 10rem;
+  height: 2.5rem;
   border-radius: 4px;
   border: 1px solid;
   padding: 0.5rem;
   box-sizing: border-box;
-  background-color: aqua;
+  appearance: none;
+  font-size: 1rem;
+  position: relative;
 }
 
 ul {
